--- a/itanium-abi.cabal
+++ b/itanium-abi.cabal
@@ -11,9 +11,10 @@ maintainer: travitch@cs.wisc.edu
 category: Development
 build-type: Simple
 cabal-version: >=1.10
-
+description: Currently supports everything in the standard but templates
+             and C++11.  Support for these will be added.  Includes a name
+             mangler, demangler, and pretty printer.
 -- copyright:
--- description:
 
 library
   default-language: Haskell2010
