--- a/itanium-abi.cabal
+++ b/itanium-abi.cabal
@@ -20,7 +20,7 @@ library
   default-language: Haskell2010
   hs-source-dirs: src
   ghc-options: -Wall
-  build-depends: base > 3 && < 5, boomerang, text, mtl, unordered-containers
+  build-depends: base > 3 && < 5, boomerang, text, transformers, unordered-containers
   exposed-modules: ABI.Itanium
   other-modules: ABI.Itanium.Types,
                  ABI.Itanium.Pretty
