--- a/itanium-abi.cabal
+++ b/itanium-abi.cabal
@@ -7,7 +7,7 @@ synopsis: An implementation of name mangling/demangling for the Itanium ABI
 license: BSD3
 license-file: LICENSE
 author: Tristan Ravitch
-maintainer: travitch@cs.wisc.edu
+maintainer: tristan@nochair.net
 category: Development
 build-type: Simple
 cabal-version: >=1.10
@@ -20,7 +20,11 @@ library
   default-language: Haskell2010
   hs-source-dirs: src
   ghc-options: -Wall
-  build-depends: base > 3 && < 5, boomerang, text, transformers, unordered-containers
+  build-depends: base >= 4 && < 5,
+                 boomerang,
+                 text >= 0.11 && < 2,
+                 transformers,
+                 unordered-containers >= 0.2.3.0 && < 0.3
   exposed-modules: ABI.Itanium
   other-modules: ABI.Itanium.Types,
                  ABI.Itanium.Pretty
