--- a/itanium-abi.cabal
+++ b/itanium-abi.cabal
@@ -21,7 +21,7 @@ library
   hs-source-dirs: src
   ghc-options: -Wall
   build-depends: base >= 4 && < 5,
-                 boomerang,
+                 boomerang >= 1.4 && < 1.5,
                  text >= 0.11 && < 2,
                  transformers,
                  unordered-containers >= 0.2.3.0 && < 0.3
