--- a/itanium-abi.cabal
+++ b/itanium-abi.cabal
@@ -11,7 +11,7 @@ maintainer: tristan@nochair.net
 category: Development
 build-type: Simple
 cabal-version: >=1.10
-tested-with: GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2
+tested-with: GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3
 description: Currently supports everything in the standard but templates
              and C++11.  Support for these will be added.  Includes a name
              mangler, demangler, and pretty printer.
