--- a/itanium-abi.cabal
+++ b/itanium-abi.cabal
@@ -24,6 +24,7 @@ library
   ghc-options: -Wall
   build-depends: base >= 4 && < 5,
                  boomerang >= 1.4.5.6 && < 1.5,
+                 exceptions >= 0.10 && < 0.11,
                  text >= 0.11 && < 2,
                  transformers,
                  unordered-containers >= 0.2.3.0 && < 0.3
