--- a/itanium-abi.cabal
+++ b/itanium-abi.cabal
@@ -17,6 +17,7 @@ description: Currently supports everything in the standard but templates
              mangler, demangler, and pretty printer.
 -- copyright:
 extra-source-files: tests/test-cases.txt
+extra-doc-files:    CHANGELOG.md
 
 library
   default-language: Haskell2010
